tests/ui/type-alias-impl-trait/unconstrained-due-to-bad-pattern.stderr
error[E0004]: non-exhaustive patterns: type `Tait` is non-empty
  --> $DIR/unconstrained-due-to-bad-pattern.rs:9:15
   |
LL |         match empty_opaque() {}
   |               ^^^^^^^^^^^^^^
   |
   = note: the matched value is of type `Tait`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~         match empty_opaque() {
LL +             _ => todo!(),
LL ~         }
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
